# bufstack

./: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  package.json
.claude/skills/scaffold-entity/: SKILL.md
backend/: .env.example  Cargo.toml  Dockerfile.workers
backend/api/: Cargo.toml
backend/api/src/: grpc.rs
backend/api/src/middleware/: auth.rs
backend/api/src/services/: helloworld_service.rs  mod.rs
backend/data/: Cargo.toml
backend/data/migrations/: 20260208000000_init.down.sql  20260208000000_init.up.sql
backend/data/src/: config.rs  lib.rs
backend/data/src/models/: mod.rs
backend/data/src/repositories/: base.rs  mod.rs
backend/io/: Cargo.toml
backend/io/src/: lib.rs
backend/services/: Cargo.toml
backend/workers/: Cargo.toml
backend/workers/src/: main.rs
frontend/: .env.example  Dockerfile  buf.gen.yaml  bun.lockb  eslint.config.mjs  nuxt.config.ts  package.json  vitest.config.ts
frontend/app/composables/: useGrpc.ts
frontend/app/layouts/: default.vue
frontend/app/pages/: index.vue  login.vue
frontend/app/pages/__tests__/: index.test.ts
frontend/app/pages/auth/: callback.vue
frontend/app/plugins/: grpc-auth.client.ts
frontend/server/api/rpc/: [...].ts
scripts/: build-and-push.sh  deploy.sh  dev.sh  setup-droplet.sh
