[package]
name = "data"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.43", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
tokio = { workspace = true }
