[package]
name = "workers"
version = "0.1.0"
edition = "2024"

[dependencies]
data = { path = "../data" }
services = { path = "../services" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "placeholder-worker"
path = "src/main.rs"
